# tensor4all-imagecompressor

./: Cargo.toml  README.md
crates/matrixci/src/: matrixaca.rs  matrixluci.rs
crates/tensor4all-core/: Cargo.toml
crates/tensor4all-core/src/: block_tensor.rs  krylov.rs  lib.rs
crates/tensor4all-core/src/defaults/: contract.rs  direct_sum.rs  factorize.rs  mod.rs  qr.rs  svd.rs  tensordynlen.rs
crates/tensor4all-core/tests/: bug_qr_after_permute.rs  linalg_qr.rs  linalg_svd.rs  tensor_basic.rs  tensor_comparison.rs  tensor_contract_multi_pair_equivalence.rs  tensor_contraction.rs  tensor_diag.rs  tensor_native_ad.rs  tensor_tensor_like.rs
crates/tensor4all-hdf5/src/: itensor.rs
crates/tensor4all-hdf5/tests/: test_hdf5.rs
crates/tensor4all-imagecompressor/: Cargo.toml
crates/tensor4all-imagecompressor/examples/: image_experiment.rs
crates/tensor4all-imagecompressor/src/: compress.rs  error.rs  lib.rs  metrics.rs  reconstruct.rs  synthetic.rs
crates/tensor4all-itensorlike/: Cargo.toml
crates/tensor4all-itensorlike/examples/: test_fit_vs_zipup.rs  test_gmres_identity_high_bonddim.rs  test_gmres_mpo.rs
crates/tensor4all-itensorlike/src/: contract.rs  tensortrain.rs
crates/tensor4all-itensorlike/tests/: bug_complex_inner.rs  bug_fit_elementwise.rs  tensortrain_native_ad.rs
crates/tensor4all-partitionedtt/src/: contract.rs  partitioned_tt.rs  subdomain_tt.rs
crates/tensor4all-quanticstransform/tests/: integration_test.rs
crates/tensor4all-simplett/: Cargo.toml  README.md
crates/tensor4all-simplett/src/: compression.rs  lib.rs
crates/tensor4all-simplett/src/mpo/: factorize.rs
crates/tensor4all-tensorbackend/: Cargo.toml
crates/tensor4all-tensorbackend/src/: any_scalar.rs  backend.rs  einsum.rs  lib.rs  storage.rs  tenferro_bridge.rs
crates/tensor4all-tensorci/src/: indexset.rs  tensorci1.rs  tensorci2.rs
crates/tensor4all-treetn/examples/: test_linsolve_general_coefficients_n10.rs  test_linsolve_general_coefficients_n3.rs  test_linsolve_identity_operator_issue.rs  test_linsolve_identity_residual_n3_variants.rs  test_linsolve_mpo_identity.rs  test_linsolve_mpo_pauli_imaginary.rs  test_linsolve_mpo_pauli_operator.rs  test_linsolve_mps_pauli_imaginary.rs
crates/tensor4all-treetn/src/linsolve/square/: local_linop.rs
crates/tensor4all-treetn/src/operator/: identity.rs
crates/tensor4all-treetn/tests/: bug_swap_values.rs
docs/design/: quanticstransform_julia_comparison.md  tenferro_ad_scalar_operator_extension_note.md
docs/plans/: 2026-03-04-tenferro-backend-bigbang-plan.md  2026-03-06-tenferro-native-slice1-design.md  2026-03-06-tenferro-native-slice1-plan.md  2026-03-06-tenferro-native-slice2-plan.md  2026-03-07-image-compressor-design.md  2026-03-07-image-compressor.md  2026-03-07-tenferro-native-full-unification-design.md  2026-03-07-tenferro-native-full-unification-plan.md
