[workspace]
members = [
    "crates/tensor4all-tensorbackend",
    "crates/tensor4all-core",
    "crates/tensor4all-treetn",
    "crates/tensor4all-itensorlike",
    "crates/tensor4all-quanticstransform",
    "crates/quanticsgrids",
    "crates/matrixci",
    "crates/tensor4all-simplett",
    "crates/tensor4all-partitionedtt",
    "crates/tensor4all-tensorci",
    "crates/tensor4all-quanticstci",
    "crates/tensor4all-capi",
    "crates/tensor4all-hdf5",
    "crates/tensor4all-imagecompressor",
    "tools/api-dump",
    "xtask",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["tensor4all collaboration"]
license = "MIT"
repository = "https://github.com/tensor4all/tensor4all-rs"

[profile.release]
debug = true  # Include debug info in release builds (enables detailed RUST_BACKTRACE)

[workspace.dependencies]
num-complex = "0.4"
num-traits = "0.2"
anyhow = "1.0"
approx = "0.5"
criterion = "0.5"
bnum = "0.12"
uint = "0.10"
libc = "0.2"
paste = "1.0"
mdarray = "0.7.2"
faer = "0.23"
thiserror = "2.0"
rand = "0.9"
rand_chacha = "0.9"
rand_distr = "0.5"
petgraph = "0.7"
dyn-clone = "1.0"
kryst = { version = "2.4", default-features = false, features = ["rayon", "logging"] }
omeco = "0.2.1"
hdf5-metno = { version = "0.12", default-features = false }
ndarray = "0.17"
hdf5-rt = { git = "https://github.com/tensor4all/hdf5-rt", default-features = false }
tenferro-algebra = { git = "https://github.com/tensor4all/tenferro-rs", rev = "f574e5ce6adb5be6c8f63c86a2395067aa724106" }
tenferro-device = { git = "https://github.com/tensor4all/tenferro-rs", rev = "f574e5ce6adb5be6c8f63c86a2395067aa724106" }
tenferro-prims = { git = "https://github.com/tensor4all/tenferro-rs", rev = "f574e5ce6adb5be6c8f63c86a2395067aa724106" }
tenferro-tensor = { git = "https://github.com/tensor4all/tenferro-rs", rev = "f574e5ce6adb5be6c8f63c86a2395067aa724106" }
tenferro-einsum = { git = "https://github.com/tensor4all/tenferro-rs", rev = "f574e5ce6adb5be6c8f63c86a2395067aa724106" }
tenferro-linalg = { git = "https://github.com/tensor4all/tenferro-rs", rev = "f574e5ce6adb5be6c8f63c86a2395067aa724106" }
tenferro-dyadtensor = { git = "https://github.com/tensor4all/tenferro-rs", rev = "f574e5ce6adb5be6c8f63c86a2395067aa724106" }
image = "0.25"
