[package]
name = "tensor4all-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Core tensor types, indices, and operations (SVD, QR, contraction) for tensor4all"

[features]
default = ["backend-tenferro"]
backend-tenferro = ["tensor4all-tensorbackend/backend-tenferro"]

[dependencies]
tensor4all-tensorbackend = { path = "../tensor4all-tensorbackend" }
matrixci = { path = "../matrixci" }
num-complex.workspace = true
num-traits.workspace = true
thiserror.workspace = true
anyhow.workspace = true
dyn-clone.workspace = true
rand.workspace = true
rand_distr.workspace = true
omeco.workspace = true
petgraph.workspace = true

[dev-dependencies]
rand_chacha.workspace = true
