[package]
name = "tensor4all-itensorlike"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "ITensors.jl-like API for tensor operations"
readme = "README.md"
keywords = ["tensor", "itensor", "tensor-network"]
categories = ["science", "mathematics"]

[dependencies]
tensor4all-core = { path = "../tensor4all-core" }
tensor4all-treetn = { path = "../tensor4all-treetn" }
num-complex.workspace = true
thiserror.workspace = true
petgraph.workspace = true
rand.workspace = true
anyhow.workspace = true

[dev-dependencies]
approx.workspace = true
tensor4all-tensorbackend = { path = "../tensor4all-tensorbackend" }
