[package]
name = "tensor4all-simplett"
description = "Simple Tensor Train (MPS) algorithms for tensor4all"
version.workspace = true
edition.workspace = true
authors = [
    "Simone Foderà <simone.fodera@lmu.de>",
    "Marc Ritter <Ritter.Marc@physik.uni-muenchen.de>",
    "Hiroshi Shinaoka <h.shinaoka@gmail.com>",
]
license.workspace = true
repository.workspace = true

[features]
default = ["backend-tenferro"]
backend-tenferro = ["tensor4all-tensorbackend/backend-tenferro"]

[dependencies]
num-complex.workspace = true
num-traits.workspace = true
anyhow.workspace = true
thiserror.workspace = true
rand.workspace = true
mdarray.workspace = true
bnum.workspace = true
matrixci = { path = "../matrixci" }
tensor4all-core = { path = "../tensor4all-core" }
tensor4all-tensorbackend = { path = "../tensor4all-tensorbackend" }

[dev-dependencies]
approx.workspace = true
rand_chacha.workspace = true
criterion.workspace = true

[[bench]]
name = "cache_overhead"
harness = false
