[package]
name = "tensor4all-tensorbackend"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Tensor storage and linear algebra backend for tensor4all"
keywords = ["tensor", "storage", "backend", "linear-algebra"]
categories = ["science", "mathematics"]

[features]
default = ["backend-tenferro"]
backend-tenferro = []

[dependencies]
num-complex.workspace = true
num-traits.workspace = true
mdarray.workspace = true
thiserror.workspace = true
anyhow.workspace = true
rand.workspace = true
rand_distr.workspace = true
tenferro-algebra.workspace = true
tenferro-device.workspace = true
tenferro-prims.workspace = true
tenferro-tensor.workspace = true
tenferro-einsum.workspace = true
tenferro-linalg.workspace = true
tenferro-dyadtensor.workspace = true

[dev-dependencies]
approx.workspace = true
